# libpapilo

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  POSTSOLVE.md  PRESOLVE.md  README.md  Taskfile.yml  build_rpm.sh  libpapilo.pc.in  libpapilo.spec.in
.github/actions/setup-test-environment/: action.yml
.github/workflows/: package.yml  test.yml
binaries/: CMakeLists.txt
scripts/: increment_jij_patch_version.sh
src/: libpapilo.cpp  libpapilo.h
src/papilo/: CMakeConfig.hpp.in
src/papilo/core/: Presolve.hpp  PresolveMethod.hpp  Reductions.hpp
test/: CMakeLists.txt
test/libpapilo/: CMakeLists.txt  GetterAPIsTest.cpp  LinkTest.c  MessageTest.cpp  ParallelColDetectionTest.cpp  ParallelColTest.cpp  ParameterTest.cpp  PostsolveTest.cpp  PresolveCommonTest.cpp  PresolveTest.cpp  PresolverStatsTest.cpp  ProblemBuilderTest.cpp  ProblemCreationTest.cpp  ProblemUpdateTest.cpp  SimpleSubstitutionTest.cpp  SingletonColsTest.cpp  TestMain.cpp  test_libpapilo_e2e.cpp  test_problem_construction.cpp
test/resources/: dual_fix_neg_inf.postsolve  dual_fix_pos_inf.postsolve
